ci: run npm ci and use npm run check-all (build) for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20.11.1"
-      - name: Install dependencies
-        run: yarn install
-      - name: Check
-        run: yarn check-all
+        - name: Install dependencies (npm)
+          run: npm ci
+        - name: Run checks
+          run: npm run check-all
