--- a/.github/workflows/deploy-client.yml
+++ b/.github/workflows/deploy-client.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Deploy to S3 and Invalidate Cloudfront in prod mode
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_CLIENT }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLIENT }}
           AWS_REGION: ap-northeast-2
         run: |
           aws s3 sync ./build s3://mysecondbucket-semin --delete
