--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -33,18 +33,11 @@ jobs:
           yarn install
           yarn build
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-2
-
-      - name: Deploy to S3 (dev prefix) and invalidate CloudFront (mysecondbucket)
+      - name: Deploy to S3 and Invalidate Cloudfront in prod mode
         env:
-          BUCKET: mysecondbucket-semin
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ap-northeast-2
         run: |
-          # upload to /dev to avoid clobbering production
-          aws s3 sync ./build s3://$BUCKET/dev --delete
-          # invalidate only the /dev prefix on the existing CloudFront distribution
-          aws cloudfront create-invalidation --distribution-id E2HTACED4FKLKY --paths "/dev/*"
+          aws s3 sync ./build s3://myfirstbucket-semin --delete
+          aws cloudfront create-invalidation --distribution-id E337T7FHBW6XPO --paths "/*"
